<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#650885"
    tools:context=".Informasi">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="16sp"
        android:text="@string/inform"
        android:textColor="#fff"
        android:textStyle="italic"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardElevation="10dp"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:elevation="4dp"
                    android:src="@drawable/profil"
                    app:civ_border_color="#000"
                    app:civ_border_width="1dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/nama1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/owner1"
                    android:textColor="#000">
                </TextView>
                <TextView
                    android:id="@+id/usia1"
                    android:layout_below="@id/nama1"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usia1"
                    android:textColor="#000">
                </TextView>
                <TextView
                    android:id="@+id/alamat1"
                    android:layout_below="@id/usia1"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat1"
                    android:textColor="#000">
                </TextView>
                <TextView
                    android:id="@+id/email1"
                    android:layout_below="@id/alamat1"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email1"
                    android:textColor="#000">
                </TextView>

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardElevation="10dp"
        android:elevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:elevation="4dp"
                    android:src="@drawable/profil2"
                    app:civ_border_color="#000"
                    app:civ_border_width="1dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/nama2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/owner2"
                    android:textColor="#000">
                </TextView>
                <TextView
                    android:id="@+id/usia2"
                    android:layout_below="@id/nama2"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usia2"
                    android:textColor="#000">
                </TextView>
                <TextView
                    android:id="@+id/alamat2"
                    android:layout_below="@id/usia2"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat2"
                    android:textColor="#000">
                </TextView>
                <TextView
                    android:id="@+id/email2"
                    android:layout_below="@id/alamat2"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email2"
                    android:textColor="#000">
                </TextView>

            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>





</LinearLayout>