<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:orientation="vertical"
    app:cardMaxElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="Title"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#FFB640FF" />

            <TextView
                android:id="@+id/str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/type"
                android:maxLines="1"
                android:text="@string/sutradara"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/sutradara"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/str"
                android:maxLines="1"
                android:text="Sutradara"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/thn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sutradara"
                android:maxLines="1"
                android:text="@string/tahun"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tahun"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/thn"
                android:maxLines="1"
                android:text="Tahun"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/drs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tahun"
                android:maxLines="1"
                android:text="@string/durasi"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/durasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/drs"
                android:maxLines="1"
                android:text="Durasi"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/stk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/durasi"
                android:maxLines="1"
                android:text="@string/stok"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/stok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stk"
                android:maxLines="1"
                android:text="Stok"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#808080" />

            <TextView
                android:id="@+id/amnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stok"
                android:maxLines="1"
                android:text="@string/harga"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amnt"
                android:maxLines="1"
                android:text="5000"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#808080" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Note"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>